packages/rust/conundrum/src/parsers/react/snapshots/conundrum__parsers__react__react_component_with_children__tests__react_component_parses_component_outline-2.snap
---
source: packages/rust/conundrum/src/parsers/react/react_component_with_children.rs
expression: children
---

This is my children markdown test content
