packages/rust/conundrum/src/parsers/react/snapshots/conundrum__parsers__react__react_component_with_children__tests__react_component_parses_component_outline.snap
---
source: packages/rust/conundrum/src/parsers/react/react_component_with_children.rs
expression: mdx_component
---
<Card title={<>My card's title</>} subtitle={<>My card's description!</>} >

This is my children markdown test content 

</Card>
